TIKA-375: Improve code quality metrics
Patch by Jeroen Reijn

git-svn-id: https://svn.apache.org/repos/asf/tika/trunk@1060801 13f79535-47bb-0310-9956-ffa450edef68